Use File::ShareDir
This commit makes this distribution use File::ShareDir.

--- a/dist.ini
+++ b/dist.ini
@@ -11,10 +11,14 @@ exclude_filename = README.pod
 exclude_match    = ^doc.*
 exclude_match    = ^cover.*
 
+[ExecDir]
+[ShareDir]
+
 [PruneCruft]
 [Authority]
 [PkgVersion]
 [MetaJSON]
+
 [ExtraTests]
 [PodSyntaxTests]
 [NoTabsTests]
