Loosen path match

--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ exclude_match    = ^cover.*
 [AutoPrereqs]
 [Prereqs / BuildRequires]
 [Prereqs]
+DBD::SQLite
 [Prereqs / Recommends]
 
 [Git::CheckFor::CorrectBranch]
